--- a/JiME.csproj
+++ b/JiME.csproj
@@ -90,6 +90,8 @@
     <Compile Include="Models\BattleTile.cs" />
     <Compile Include="Models\Campaign.cs" />
     <Compile Include="Models\Collection.cs" />
+    <Compile Include="Models\BaseTile.cs" />
+    <Compile Include="Models\SquareTile.cs" />
     <Compile Include="Models\HexTile.cs" />
     <Compile Include="Models\Chapter.cs" />
     <Compile Include="Models\Interaction Events\BranchInteraction.cs" />
@@ -752,6 +754,26 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\duplicate.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\TilesA\998.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\TilesA\999.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\TilesB\998.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\TilesB\999.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
