--- a/JiME.csproj
+++ b/JiME.csproj
@@ -119,8 +119,12 @@
     <Compile Include="Models\Threat.cs" />
     <Compile Include="Models\Token.cs" />
     <Compile Include="Models\Trigger.cs" />
-    <Compile Include="Procedural\DummyGenerator.cs" />
+    <Compile Include="Procedural\SimpleGenerator\SimpleGeneratorContext.cs" />
+    <Compile Include="Procedural\SimpleGenerator\SimpleGenerator.cs" />
+    <Compile Include="Procedural\SimpleGenerator\SimpleGeneratorParameters.cs" />
     <Compile Include="Procedural\IProceduralGenerator.cs" />
+    <Compile Include="Procedural\SimpleGenerator\StoryPoint.cs" />
+    <Compile Include="Procedural\SimpleGenerator\StoryPointInteraction.cs" />
     <Compile Include="UserControls\TokenTypeSelector.xaml.cs">
       <DependentUpon>TokenTypeSelector.xaml</DependentUpon>
     </Compile>
@@ -466,6 +470,7 @@
     <EmbeddedResource Include="Assets\enemy-activation-defaults.json" />
     <EmbeddedResource Include="Assets\enemy-activation-defaults-original.json" />
     <EmbeddedResource Include="Assets\terrain-interactions.json" />
+    <None Include="Procedural\README.md" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
