--- a/JiME.csproj
+++ b/JiME.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Procedural\SimpleGenerator\SimpleGenerator.cs" />
     <Compile Include="Procedural\SimpleGenerator\SimpleGeneratorParameters.cs" />
     <Compile Include="Procedural\IProceduralGenerator.cs" />
+    <Compile Include="Procedural\SimpleGenerator\StoryArchetype.cs" />
     <Compile Include="Procedural\SimpleGenerator\StoryPoint.cs" />
     <Compile Include="Procedural\SimpleGenerator\StoryPointInteraction.cs" />
     <Compile Include="UserControls\TokenTypeSelector.xaml.cs">
@@ -470,6 +471,7 @@
     <EmbeddedResource Include="Assets\enemy-activation-defaults.json" />
     <EmbeddedResource Include="Assets\enemy-activation-defaults-original.json" />
     <EmbeddedResource Include="Assets\terrain-interactions.json" />
+    <EmbeddedResource Include="Assets\Procedural\story-archetypes.json" />
     <None Include="Procedural\README.md" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
