Work on tile info and generation

--- a/JiME.csproj
+++ b/JiME.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Procedural\SimpleGenerator\SimpleGeneratorParameters.cs" />
     <Compile Include="Procedural\IProceduralGenerator.cs" />
     <Compile Include="Procedural\StoryElements\StoryGenerator.cs" />
+    <Compile Include="Procedural\StoryElements\StoryLocation.cs" />
     <Compile Include="Procedural\StoryElements\StoryTemplate.cs" />
     <Compile Include="Procedural\StoryElements\StoryArchetype.cs" />
     <Compile Include="Procedural\StoryElements\StoryPoint.cs" />
@@ -475,6 +476,7 @@
     <EmbeddedResource Include="Assets\terrain-interactions.json" />
     <EmbeddedResource Include="Assets\Procedural\story-archetypes.json" />
     <EmbeddedResource Include="Assets\Procedural\story-templates.json" />
+    <EmbeddedResource Include="Assets\Procedural\story-locations.json" />
     <None Include="Procedural\README.md" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
